--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -103,7 +103,7 @@ Additional research will be important for improving our spotty understanding of 
 
 **Forest responses and feedbacks to climate change will have a critical influence on the future of Earth's climate.**
 Globally, temperatures have risen $1.2^\circ$C since the 1850-1900 period [@rohdeBerkeleyEarthLand2020] and are expected to rise over pre-industrial levels of $1.6 - 4.3^{\circ}$C by 2100 (IPCC 2014), accompanied by increasing severity and frequency of heat waves [@meehlMoreIntenseMore2004] and hotter droughts [@trenberthGlobalWarmingChanges2014b].
-These changes are expected to have profound effects on tree metabolism and forest ecosystem function [@breshearsUnderappreciatedPlantVulnerabilitiesa 2021; IPBES report], including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilitiesa 2021; @corlettImpactsWarmingTropical2011], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reduced growth and elevated mortality during drought [@teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilitiesa 2021]. Collectively, these impacts may lead to reduced forest C sequestration, as may already be occurring in some forests [@oishiWarmerTemperaturesReduce2018; @sullivanLongtermThermalSensitivity2020]. The resulting feedbacks to the climate system, decreased C storage, and changes in albedo and hydrology will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016], yet this influence remains extremely uncertain [REFS].
+These changes are expected to have profound effects on tree metabolism and forest ecosystem function [@breshearsUnderappreciatedPlantVulnerabilitiesa 2021; IPBES report], including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilitiesa 2021; @corlettImpactsWarmingTropical2011], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reduced growth and elevated mortality during drought [@teskeyResponsesTreeSpecies2015; @rollinsonClimateSensitivityUnderstory; @breshearsUnderappreciatedPlantVulnerabilitiesa; @mcdowellPervasiveShiftsForest2020]. Collectively, these impacts may lead to reduced forest C sequestration, as may already be occurring in some forests [@oishiWarmerTemperaturesReduce2018; @sullivanLongtermThermalSensitivity2020]. The resulting feedbacks to the climate system, decreased C storage, and changes in albedo and hydrology will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016], yet this influence remains extremely uncertain [REFS].
  
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by the more exposed canopy trees [@zellweger_seasonal_2019; @davisMicroclimaticBufferingForests2019].**
 Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. 
@@ -122,7 +122,7 @@ We focus on five key themes (Fig. `r fig_schematic`):
 (5) size-structuring of whole-tree and ecosystem function.
 *We then consider the implications for understanding forest responses to global change, including scaling across space and time.* 
 
-![**Figure `r fig_schematic`. Schematic summarizing vertical gradients in forests with dense canopies during daytime growing season conditions.** Patterns summarized here tend to be weaker, or sometimes reversed, under more open canopies, during seasons of deciduous leaf loss, or at nighttime. [Issue #27](https://github.com/EcoClimLab/vertical-thermal-review/issues/27). ](schematics/vertical thermal sensitivity image.png)
+![**Figure `r fig_schematic`. Schematic summarizing vertical gradients in forests with dense canopies during daytime growing season conditions.** Patterns summarized here tend to be weaker, or sometimes reversed, under more open canopies, during seasons of deciduous leaf loss, or at nighttime. [Issue #27](https://github.com/EcoClimLab/vertical-thermal-review/issues/27). ](schematics/Screen Shot 2021-07-19 at 1.10.17 PM.png)
 
 
 
@@ -134,7 +134,7 @@ We focus on five key themes (Fig. `r fig_schematic`):
 In this section, we supplement a review of the existing literature with a new analysis of data on vegetation structure and vertical microclimate profiles from the U.S. National Ecological Observatory Network [NEON; Figs. `r fig_NEON_vertical`-`r SIfig_NEON_all`; Appendix `r appendix_NEON_methods`, Schimel et al. 2007].
 While the focus here is on vertical gradients, it is important to note that in heterogeneous canopies with high gap fractions and large variation in tree height, or at forest edges, the biophysical environment can be more closely linked to the distance from the outer canopy than to height (Parker 1995). 
 
-![**Figure `r fig_NEON_vertical`. Vertical gradients in the biophysical environment for six sites in the National Ecological Observatory Network (NEON)**. Shown are  height profiles in growing season (a) leaf area density, (b) proportion sun leaves, (c) proportion light incidence, and July mean ± 1 standard deviation for (d) maximum photosyntehtically active ratiation (PAR), (e) maximum wind speed, (f) minimum humidity, (g) maximum $T_{air}$, and (h) maximum biological temperature, $T_{bio}$. Sites include a tropical montane broadleaf evergreen forest (Pu‘u Maka‘ala Natural Area Reserve, Hawaii; PUUM), a subtropical longleaf pine savanna (Ordway-Swisher Biological Station, FL; OSBS), two temperate broadleaf forests (Smithsonian Conservation Biology Institute, VA, SCBI; Smithsonian Environmental Research Center, MD, SERC), and a mixed northern hardwood and coniferous forest (Harvard Forest, MA; HARV). Vertical profiles in micrometeorological variables (d-h) at all NEON sites are shown in Fig. S1.](NEON_height_profiles/figures/profile_all.png)
+![**Figure `r fig_NEON_vertical`. Vertical gradients in the biophysical environment for six sites in the National Ecological Observatory Network (NEON)**. Shown are  height profiles in growing season (a) leaf area density, (b) proportion sun leaves, (c) proportion light incidence, and July mean ± 1 standard deviation for (d) maximum photosynthetically active radiation (PAR), (e) maximum wind speed, (f) minimum humidity, (g) maximum $T_{air}$, and (h) maximum biological temperature, $T_{bio}$. Sites include a tropical montane broadleaf evergreen forest (Pu‘u Maka‘ala Natural Area Reserve, Hawaii; PUUM), a subtropical longleaf pine savanna (Ordway-Swisher Biological Station, FL; OSBS), two temperate broadleaf forests (Smithsonian Conservation Biology Institute, VA, SCBI; Smithsonian Environmental Research Center, MD, SERC), and a mixed northern hardwood and coniferous forest (Harvard Forest, MA; HARV). Vertical profiles in micrometeorological variables (d-h) at all NEON sites are shown in Fig. S1.](NEON_height_profiles/figures/profile_all.png)
 
 **Canopy foliage acts as the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions. It is critical in influencing -- and is influenced by -- the vertical biophysical gradient (Fig. `r fig_NEON_vertical`).**
 Foliage distribution is structured in correspondence with the distribution of tree sizes within a forest, where leaf area density (LAD; *i.e.*, leaf area per unit volume) patterns along the vertical gradient are heterogeneous across forests (Figs. `r fig_NEON_vertical`a-b, `r SIfig_NEON_all`). 
@@ -155,7 +155,7 @@ Specifically, across the NEON sites, July maximum daily wind speeds averaged up 
 The implication is that upper canopy leaves have substantially higher boundary layer conductance ($g_a$) and associated potential for loss of both water and heat (see next section).
 
 **Atmospheric concentrations of carbon dioxide (CO~2~) and water vapor can also vary across the vertical gradient.**
-Atmospheric CO~2~ concentrations tend to be higher near ground level at night, associated with plant and soil respiration, but the elevated $CO_{2}$ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999]. Elevated $CO_{2}$ may benefit understory seedlings operating close to their carbon compensation point, but given that differences are neglible for most of day when photosynthesis is occurring, pattern in CO~2~ concentrations are unlikely to significantly affect the energy balance and metabolism of leaves across the forest vertical gradient.
+Atmospheric CO~2~ concentrations tend to be higher near ground level at night, associated with plant and soil respiration, but the elevated $CO_{2}$ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999]. Elevated $CO_{2}$ may benefit understory seedlings operating close to their carbon compensation point, but given that differences are negligible for most of day when photosynthesis is occurring, pattern in CO~2~ concentrations are unlikely to significantly affect the energy balance and metabolism of leaves across the forest vertical gradient.
 
 Relative humidity, RH, tends to be higher in the understory and decreases with height across the vertical profile, although this trend is absent in open forests [Figs. `r fig_NEON_vertical`f, `r SIfig_NEON_all`, e.g., @mcgregor_tree_nodate].
 Dense-canopy forests maintain higher daily maximum RH below-canopy than open forests and nearby open areas, and this effect is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a; @hanberryOpenForestEcosystems2020a]. 
@@ -172,7 +172,7 @@ Seasonally, canopy buffering capacity is greater in wet than dry seasons, presum
 
 ## Leaf temperature 
 
-Leaf temperature ($T_{leaf}$) is strongly tied to $T_{air}$, and is further influenced by other biophysical drivers (reviewed above) and by leaf traits and stomatal conductance (see following sections) with leaves adjusted to their environment so as to maintain, when possible, an optimal $T_{leaf}$ for carbon assimilation and metabolic processes [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020]. 
+Leaf temperature ($T_{leaf}$) is strongly tied to $T_{air}$, and is further influenced by other biophysical drivers (reviewed above) and by leaf traits and stomatal conductance (see following sections) with leaves adjusted to their environment so as to maintain, when possible, an optimal $T_{leaf}$ for carbon assimilation and metabolic processes [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020; @drakeNoEvidenceHomeostatic2020]. 
 Leaves can be either cooler than air at high $T_{air}$ or warmer than air at low $T_{air}$ (limited homeothermy), and may sometimes be drastically warmer than $T_{air}$ [megathermy, @doughtyAreTropicalForests2008].
 While $T_{leaf}$ is most commonly within a few degrees of $T_{air}$, it is rarely exactly equal [poikilothermy, @cavaleriColdbloodedForestsWarming2020; @drakeNoEvidenceHomeostatic2020]. 
 
@@ -199,12 +199,12 @@ With adequate water, species with smaller leaves (higher $g_a$) and larger $g_s$
 
 **These basic biophysical principles shape the propensities for $T_{leaf}$ to be elevated above $T_{air}$ across vertical gradients in closed-canopy forests.**
 High radiation at the top of the vertical profile (Fig. `r fig_NEON_vertical`) implies that canopy leaves have much greater propensity for high $T_{leaf}-T_{air}$, such that they would be expected to be warmer than understory leaves under most conditions (Fig. `r fig_leaf_T`).
-However, higher windspeeds such as in NEON sites with windspeeds ~4 ms (Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ upto ~ 4$^\circ$C (Fig. `r fig_leaf_T`b)[@bonan_ecological_2016; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Collectively, windspeed, lower RH (Fig. `r fig_NEON_vertical`), along with adaptive leaf traits that reduce $g_a$ and increase $g_s$ (reviewed below), give upper canopy lower sensitivity to intercepted radiation (Fig. `r fig_leaf_T`a) and higher rates of heat loss (Fig. `r fig_leaf_T`b-e).
+However, higher windspeeds such as in NEON sites with windspeeds ~4 m s^-1^ (Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ upto ~ 4$^\circ$C (Fig. `r fig_leaf_T`b)[@bonan_ecological_2016; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Collectively, windspeed, lower RH (Fig. `r fig_NEON_vertical`), along with adaptive leaf traits that reduce $g_a$ and increase $g_s$ (reviewed below), give upper canopy lower sensitivity to intercepted radiation (Fig. `r fig_leaf_T`a) and higher rates of heat loss (Fig. `r fig_leaf_T`b-e).
 
 **Vertical $T_{leaf}$ gradients can also vary with canopy structure (Fig. `r fig_leaf_T`).**
-$T_{leaf}$ generally tracks $T_{air}$, where vertical gradients of $T_{air}$ depend on canopy structure and $LAI$ [@leuzingerTreeSpeciesDiversity2007;@mullerEvidenceEfficientNonevaporative2021]. Closed canopies, and high $LAI$ canopies act as an umbrella, absorbing most of the incoming radiation and preventing vertical air mixing in the understory microclimate. The intensity of incoming radiation and $VPD$ in the upper canopy can limit $g_s$. Therefore, we would expect a stronger $T_{leaf}$ gradient where upper canopy leaves can reach much warmer temperatures than below canopies layers [@millerOnlySunlitLeaves2021]. In contrast, open canopies, or lower canopy $LAI$ allow more vertical air mixing and sunlight into the understory, that can either neutralize a $T_{leaf}$ gradient or elevate below canopy $T_{leaf}-T_{air}$ of shade leaves more than upper canopy due to the propensity of shade leaves for lower $g_s$ and greater thermal capacitance (capacity to hold heat), as in the case of the 'canopy greenhouse effect' or sunflecks, as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013b]. 
+$T_{leaf}$ generally tracks $T_{air}$, where vertical gradients of $T_{air}$ depend on canopy structure and LAI [@leuzingerTreeSpeciesDiversity2007;@mullerEvidenceEfficientNonevaporative2021]. Closed canopies, and high LAI canopies act as an umbrella, absorbing most of the incoming radiation and preventing vertical air mixing in the understory microclimate. The intensity of incoming radiation and VPD in the upper canopy can limit $g_s$. Therefore, we would expect a stronger $T_{leaf}$ gradient where upper canopy leaves can reach much warmer temperatures than below canopies layers [@millerOnlySunlitLeaves2021]. In contrast, open canopies, or lower canopy LAI allow more vertical air mixing and sunlight into the understory, that can either neutralize a $T_{leaf}$ gradient or elevate below canopy $T_{leaf}-T_{air}$ of shade leaves more than upper canopy as in the case of the 'canopy greenhouse effect' or sunflecks, as mentioned above [@hardwickRelationshipLeafArea2015], and also due to the propensity of shade leaves for lower $g_s$ and greater thermal capacitance (capacity to hold heat) [@schymanskiStomatalControlLeaf2013b]. 
 
-**Within closed-canopy forests, vertical gradients in the propensity for $T_{leaf}$ to be elevated above $T_{air}$ are expected to vary with micrometeorlogical conditions (Fig. `r fig_leaf_T`).**
+**Within closed-canopy forests vertical gradients, the propensity for $T_{leaf}$ to be elevated above $T_{air}$ are expected to vary with micrometeorological conditions (Fig. `r fig_leaf_T`).**
 Under hot conditions, higher wind speeds and $g_a$ enable cooling, but at lower wind conditions, thickness of air layer at the leaf surface curbs rapid leaf-to-air heat transfer, limiting $g_a$ and increasing $T_{leaf} - T_{air}$ [Fig. `r fig_leaf_T`b, @martin_boundary_1999; @leighInfluenceLeafSize2017; @robertsStomatalBoundaryLayerConductances1990a; @songTreeSurfaceTemperature2020]. 
 Thus, understory leaves, which typically experience lower windspeeds (Fig. `r fig_NEON_vertical`), would retain more heat.
 The higher-RH conditions of the understory (Fig. `r fig_NEON_vertical`) would also inhibit cooling, as $\lambda E$ is stifled under high RH, resulting in  greater $T_{leaf}$-$T_{air}$ [Fig. `r fig_leaf_T`c, @songTreeSurfaceTemperature2020; @tibbittsHumidityPlants1979b; @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts].
@@ -215,7 +215,7 @@ Because sun leaves are exposed to higher irradiance and $VPD$, their $g_s$-limit
 ### In situ observations
 **Following the principles outlined above, vertical microclimate profiles, leaf traits (see "Leaf Traits" section), and $g_s$ (see "Leaf metabolism and thermal responses" section) together explain in situ $T_{leaf}$ observations.** 
 Often, $T_{leaf}$ tracks $T_{air}$, *in large part due to vertical gradients in leaf traits and $g_s$* / ~due to high evapotranspiration~, and therefore differs little between understory and canopy.
-In forests with dense canopies, including tropical and temperate broadleaf forests, leaves experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies than buffered lower-canopies, sometimes exceeding optima for photosynthesis ($T_{opt}$) and $T_{air}$, because of $g_s$-limitation and high radiation loads [@carterExperimentalWarmingTropical; @niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. 
+In forests with dense canopies, including tropical and temperate broadleaf forests, leaves experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies than buffered lower-canopies, sometimes exceeding optima for photosynthesis ($T_{opt}$) and $T_{air}$, because of $g_s$-limitation and high solar radiation loads [@carterExperimentalWarmingTropical; @niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. 
 In contrast, in open forests with lower $LAI$, lower-canopy $T_{leaf}$ can equal or even exceed upper canopy $T_{leaf}$, due to greater light permeability, vertical air mixing, and still air in the lower canopy and heating from the ground [Figs. `r fig_NEON_vertical`h, `r SIfig_NEON_all`b,e, @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987;@rey-sanchez_spatial_2016]. 
 Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019]. 
 Greater $RH$ in inner canopy can also increase $T_{leaf}$ relatively more than upper canopy $T_{leaf}$ [@dietzVerticalPatternsDuration2007]. 
@@ -254,12 +254,12 @@ nocite: |
 
 #### (Anatomical, Morphological and Physiological traits)
 
-Sun leaves in the exposed canopy have traits that help avoid heat and water stress -- for instance, by being smaller, hairier, and with higher vein density than shade leaves [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006; @zwienieckiHydraulicLimitationsImposed2004;@mathurPhotosyntheticEfficiencySun2018a], and with steeper leaf-angle [@niinemetsAdjustmentFoliageStructure1998, *REF*]. These traits (Table 1) collectively aid heat dissipation and regulate $T_{leaf}$-photosynthetic balance. In contrast, shade leaves have traits that maximize light capture in the diffused-light environment with sunflecks (e.g., lower LMA), but are more likely to get overheated than sun leaves due to greater thermal capacitance [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. In open canopies where light is comparatively homogeneous, exposed leaves are primarily shaped by $T_{air_{max}}$ and $VPD$ stress, rather than solely by light [@mediavillaFoliarPlasticityRelated2019a].
+Sun leaves in the exposed canopy have traits that help avoid heat and water stress -- for instance, being smaller, hairier, and with higher vein density than shade leaves [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006; @zwienieckiHydraulicLimitationsImposed2004;@mathurPhotosyntheticEfficiencySun2018a], and with steeper leaf-angle [@niinemetsAdjustmentFoliageStructure1998, *REF*]. These traits (Table 1) collectively aid heat dissipation and regulate $T_{leaf}$-photosynthetic balance. In contrast, shade leaves have traits that maximize light capture in the diffused-light environment with sunflecks (e.g., lower LMA), but are more likely to get overheated than sun leaves due to greater thermal capacitance [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. In open canopies where light is comparatively homogeneous, exposed leaves are primarily shaped by $T_{air_{max}}$ and $VPD$ stress, rather than solely by light [@mediavillaFoliarPlasticityRelated2019a].
 
 #### (Biochemical and elemental traits, and isoprenes)
 
 Biochemical protection against foliage light and heat damage also increases with irradiance, and thus tends to be higher in the upper canopy than in the understory (Table 1). 
-Caratenoids and xanthophyll cycle pigments -- violaxanthin, antheraxanthin and zeaxanthin ($VAZ$) -- can play a role in antioxidant scavenging and converting excess excitation energy into heat to reduce photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. The dissapation of excess light energy is also important for leaf acclimation to higher temperature if high $T_{leaf}$ impairs the photochemical energy dissipation pathway [@havauxTemperaturedependentAdjustmentThermal1996].
+Caratenoids and xanthophyll cycle pigments -- violaxanthin, antheraxanthin and zeaxanthin ($VAZ$) -- can play a role in antioxidant scavenging and converting excess excitation energy into heat to reduce photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. The dissipation of excess light energy is also important for leaf acclimation to higher temperature if high $T_{leaf}$ impairs the photochemical energy dissipation pathway [@havauxTemperaturedependentAdjustmentThermal1996].
 
 Elemental traits, such as $N_{area}$ and $P_{area}$, contribute to activities of high leaf metabolism, including respiration [@meirLeafRespirationTwo2001;@weerasingheCanopyPositionAffects2014] and photosynthetic processes in sun leaves [Table 1, @scartazzaInvestigatingEuropeanBeech2016; @niinemetsWithincanopyVariationRate2004a; @weerasingheCanopyPositionAffects2014]. Within-canopy leaf nitrogen distribution is regulated to prevent photoinhibition in shade leaves during sunflecks, and direct light for sun leaves [@kitaoCanopyNitrogenDistribution2018]. Hence, although we would expect elemental traits to influence vertical foliar thermal sensitivity,  @zhuPlasticityPhotosyntheticHeat2018 and @osullivanThermalLimitsLeaf2017 observed no relation between foliar thermal tolerance and total foliar concentrations of N and P.  
 
@@ -310,7 +310,7 @@ Maximum $g_s$ increases with light environment, and is thus higher in the sun ex
 **Photosynthetic capacity is generally higher in exposed canopy positions-- a fact that is both theoretically expected and observed in numerous field studies (Table 2; Niinemets 2007 ; Kenzo et al. 2015 ; Slot et al. 2019; Chen et al. 2020).**
 This is primarily driven by the greater light available to sun-leaves, that also have traits (Table 1, Table 2) allowing greater photosynthetic rates at high light under sufficient nutrient and water conditions. Photosynthesis increases with irradiance, and saturates at quantum flux density of 400 $m^{-2}$ $s^{-1}$ to 700nm $m^{-2}$ $s^{-1}$. Light saturation levels differ between leaves and whole canopies with leaves saturating at lower light level than canopies; while a certain amount of light saturates the photosynthetic capacity of the leaf, increasing the amount of light in the canopy may increase photosynthesis in the shaded part of the canopy.
 
-Temperature can affect photosynthesis via direct and indirect pathways--directly, by altering photosynthetic enzyme activity and electron transport chain, and indirectly through increased $VPD$ causing stomatal closure [@lloydEffectsRisingTemperatures2008]. Photosynthesis has a peaked response to temperature, with the peak commonly found to correspond to the prevalent ambient growing season conditions [@tanOptimumAirTemperature2017; @slotSituTemperatureResponse2017]. Beyond the optimum, photosynthesis decreases as a result of stomatal closure (e.g. @slotSituTemperatureResponse2017; @smithEmpiricalEvidenceResilience2020 [temperate/boreal refs needed), and eventually due to biochemical constraints (@kumarathungeAcclimationAdaptationComponents2019a; Sage & Kubien 2007; Varhammer et al. 2015). Irresversible damage to photosystem II, leading to leaf necrosis and eventually leaf death occurs at $T_{leaf}$ of $40-60^{\circ}C$
+Temperature can affect photosynthesis via direct and indirect pathways--directly, by altering photosynthetic enzyme activity and electron transport chain, and indirectly through increased $VPD$ causing stomatal closure [@lloydEffectsRisingTemperatures2008]. Photosynthesis has a peaked response to temperature, with the peak commonly found to correspond to the prevalent ambient growing season conditions [@tanOptimumAirTemperature2017; @slotSituTemperatureResponse2017]. Beyond the optimum, photosynthesis decreases as a result of stomatal closure (e.g. @slotSituTemperatureResponse2017; @smithEmpiricalEvidenceResilience2020 [temperate/boreal refs needed), and eventually due to biochemical constraints (@kumarathungeAcclimationAdaptationComponents2019a; Sage & Kubien 2007; Varhammer et al. 2015). rreversible damage to photosystem II, leading to leaf necrosis and eventually leaf death occurs at $T_{leaf}$ of $40-60^{\circ}C$
 [Baker 2008; @feeley_thermal_2020].  
 
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
@@ -324,7 +324,7 @@ $T_{crit}$ is the temperature at which efficiency of photosystem II starts to de
 
 **Thermal tolerance (e.g., $T_{50}$) varies with exposure, but there are no studies isolating effect of height.**
 
-*If we take geographic gradients as a reliable proxy, we'd expect temperature sensitivities to reflect the environment to which the trees are adapted/ acclimatized.* Global $T_{50s}$ across latitude and climate range from ~45-50$^\circ$C (O' sullivan et al. 2017), where $T_{50}$ and $T_{crit}$ decrease with elevation among tropical forests and across latitudes [@feeley_thermal_2020;  @slotLeafHeatTolerance2020; @osullivanThermalLimitsLeaf2017]. 
+*If we take geographic gradients as a reliable proxy, we'd expect temperature sensitivities to reflect the environment to which the trees are adapted/ acclimatized.* Global $T_{50s}$ across latitude and climate range from ~45-50$^\circ$C [@osullivanThermalLimitsLeaf2017], where $T_{50}$ and $T_{crit}$ decrease with elevation among tropical forests and across latitudes [@feeley_thermal_2020;  @slotLeafHeatTolerance2020; @osullivanThermalLimitsLeaf2017]. 
 
 Leaf thermal tolerances are more closely adapted to microclimate than macroclimate [@feeley_thermal_2020; @slotPhotosyntheticPlasticityTropical2021]. Chinquapin oak (*Quercus muehlenbergii*) growing in xeric, sunnier conditions showed higher $T_{50}$ by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) growing in shaded mesic conditions [@hamerlynckPhotosyntheticStomatalResponses1996a]. Along a vertical gradient within canopy, *Acacia papyrocarpa* (Benth.) showed greater $T_{50}$ and higher composite climate stress in the lower north-facing canopy than other canopy positions, correlating with low wind-speed, greater $T_{air}$ and longer leaf thermal time constants [@curtis_intracanopy_2019]. Additionally, thermal tolerances are explained more by leaf traits than phylogeny [@feeley_thermal_2020; @slotPhotosyntheticPlasticityTropical2021]. $T_{crit}$ was found to be greater among tropical species with large leaves that had slow heating and cooling time, whereas $T_{50}$ was greater among species with greater LMA [@slotLeafHeatTolerance2020]. Across species sun leaves that experienced higher maximum temperatures show higher photosynthetic heat tolerance [@perezPhotosyntheticHeatTolerances2020]. However, considering sun and shade leaf differences within canopy (Table 1) $T_{50}$ varies modestly, being slightly lower for shade than sun leaves for two of three tree species in Panama [@slotPhotosyntheticHeatTolerance2019a]. Based on this evidence, we would expect leaves exposed to greater heat stress within canopy to have higher heat tolerance, but further research is required to fully understand relationship between heat tolerance, light exposure and microclimates.
 
