update on gs and Topt

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -582,6 +582,24 @@
   number = {2}
 }
 
+@article{belandEstimatingLeafArea2011,
+  title = {Estimating Leaf Area Distribution in Savanna Trees from Terrestrial {{LiDAR}} Measurements},
+  author = {Béland, Martin and Widlowski, Jean-Luc and Fournier, Richard A. and Côté, Jean-François and Verstraete, Michel M.},
+  date = {2011-09-15},
+  journaltitle = {Agricultural and Forest Meteorology},
+  volume = {151},
+  pages = {1252--1266},
+  issn = {0168-1923},
+  doi = {10.1016/j.agrformet.2011.05.004},
+  url = {https://www.sciencedirect.com/science/article/pii/S0168192311001481},
+  urldate = {2021-07-20},
+  abstract = {Vegetation structure parameters are key elements in the study of ecosystem functioning and global scale ecosystemic interactions. The detailed retrieval of many of these parameters by direct measurements is impractical due to the quantity of plant material in trees. Terrestrial LiDAR Scanners (TLSs) have been shown to hold great potential as an indirect means of estimating plant structure parameters with a high level of detail, while some studies identified a number of challenges inherent to this approach. In this study we investigate the use of a voxel-based approach to retrieve leaf area distribution of individual trees. The approach is based on the contact frequency method applied to co-registered TLS returns from two or more scanning positions. The contact frequency was computed for voxels being 10, 30, and 50cm in size and subsequently corrected for the influence of occlusion effects, leaf inclination, the presence of non-photosynthetic material, and the laser beam size. The leaf area of voxels for which occlusion effects were too pronounced was estimated using modeled values based on the availability of light. We compared the TLS derived leaf area estimates against direct measurements, obtained by the harvesting of leaves, in a broad-leaved savanna of central Mali. The measured leaf area values of the sampled trees ranged from 30 to 530m2, and crown LAI values between 0.8 and 7.2. The leaf area estimates lay on average 14\% from the reference measurements (general bias). Our method provides vertical as well as radial distributions of leaf area in individual trees, and lends itself to the estimation of savanna vegetation structural parameters with a high level of detail.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\VBX9HYAU\\S0168192311001481.html},
+  keywords = {3D leaf area distribution,Leaf Area Density (LAD),Leaf Area Index (LAI),Occlusion effects,Savanna,Terrestrial LiDAR Scanner,Voxel},
+  langid = {english},
+  number = {9}
+}
+
 @article{benavidesIntraspecificTraitVariability2019,
   title = {Intraspecific Trait Variability of Trees Is Related to Canopy Species Richness in {{European}} Forests},
   author = {Benavides, Raquel and Valladares, Fernando and Wirth, Christian and Müller, Sandra and Scherer-Lorenzen, Michael},
@@ -3420,6 +3438,20 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\MDGNDCWG\\Jiao-jun et al. - 2004 - Wind profiles in and over trees.pdf},
   langid = {english},
   number = {4}
+}
+
+@article{johnstonWhatLiesVertical2020,
+  title = {What {{Lies Beneath}}: {{Vertical Heterogeneity}} in {{Vegetation Canopy Temperatures}}},
+  shorttitle = {What {{Lies Beneath}}},
+  author = {Johnston, M. and Andreu, A. and Verfaillie, J. and Baldocchi, D. D. and Moorcroft, P. R.},
+  date = {2020-12-01},
+  volume = {2020},
+  pages = {B088-03},
+  url = {https://ui.adsabs.harvard.edu/abs/2020AGUFMB088...03J},
+  urldate = {2021-07-20},
+  abstract = {Canopy temperature exerts fundamental controls on plant-level physiological processes such as photosynthesis, respiration, transpiration, and growth and development, and consequently on ecosystem fluxes of carbon, water, and energy. New thermal remote sensing instruments and algorithms are offering unprecedented measurements of surface canopy temperature across space and time. However, airborne and satellite sensors only measure canopies from above, and the vertical heterogeneity of canopy temperatures remains largely unexplored. We combined data from the ECOSTRESS mission, lidar, and a FLIR thermal camera deployed in a Californian woodland savanna to answer the following questions: (1) What is the vertical heterogeneity of tree canopy temperature in a Mediterranean woodland savanna, and how does it vary diurnally, seasonally, and in response to environmental conditions?, and (2) How do blue oak (Quercus douglasii) tree canopy temperatures as measured by ECOSTRESS correspond with FLIR-measured, vertically-resolved temperatures? At any particular time, locations within a single blue oak canopy can vary by more than 4°C, while the difference in temperature between the top quarter and bottom quarter of the canopy can range ±2°C. Canopy temperatures are considerably more homogeneous at night and at other times with low incoming solar radiation. Comparisons with the newly-available ECOSTRESS thermal measurements will also be presented. Based on results from the thermal imaging camera, we predict that ECOSTRESS measurements are a good proxy for bulk canopy temperature under conditions of low incoming radiation, but are comparatively non-representative of canopy temperature when the temperature at the bottom of the canopy is significantly warmer or cooler than the temperature at the top, such as when the understory grass is dry, hot, and strongly radiating.},
+  eventtitle = {{{AGU Fall Meeting Abstracts}}},
+  keywords = {0414 Biogeochemical cycles,0416 Biogeophysics,0426 Biosphere/atmosphere interactions,0476 Plant ecology,and modeling,BIOGEOSCIENCES,processes}
 }
 
 @article{juckerCanopyStructureTopography2018,
@@ -8581,6 +8613,24 @@
   urldate = {2020-12-14},
   file = {C\:\\Users\\Me\\Zotero\\storage\\UQE73YRC\\1.html},
   langid = {english}
+}
+
+@article{tanOptimumAirTemperature2017,
+  title = {Optimum Air Temperature for Tropical Forest Photosynthesis: Mechanisms Involved and Implications for Climate Warming},
+  shorttitle = {Optimum Air Temperature for Tropical Forest Photosynthesis},
+  author = {Tan, Zheng-Hong and Zeng, Jiye and Zhang, Yong-Jiang and Slot, Martijn and Gamo, Minoru and Hirano, Takashi and Kosugi, Yoshiko and da Rocha, Humberto R and Saleska, Scott R and Goulden, Michael L and Wofsy, Steven C and Miller, Scott D and Manzi, Antonio O and Nobre, Antonio D and de Camargo, Plinio B and Restrepo-Coupe, Natalia},
+  date = {2017-05-01},
+  journaltitle = {Environ. Res. Lett.},
+  volume = {12},
+  pages = {054022},
+  issn = {1748-9326},
+  doi = {10.1088/1748-9326/aa6f97},
+  url = {https://iopscience.iop.org/article/10.1088/1748-9326/aa6f97},
+  urldate = {2021-07-14},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\3X6BR34D\\Tan et al. - 2017 - Optimum air temperature for tropical forest photos.pdf},
+  langid = {english},
+  number = {5},
+  options = {useprefix=true}
 }
 
 @article{taylorCapacityEmitIsoprene2019a,
