--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -216,8 +216,8 @@ Because sun leaves are exposed to higher irradiance and $VPD$, their $g_s$-limit
 **Following the principles outlined above, vertical microclimate profiles, leaf traits (see "Leaf Traits" section), and $g_s$ (see "Leaf metabolism and thermal responses" section) together explain in situ $T_{leaf}$ observations.** 
 Often, $T_{leaf}$ tracks $T_{air}$, *in large part due to vertical gradients in leaf traits and $g_s$* / ~due to high evapotranspiration~, and therefore differs little between understory and canopy.
 In forests with dense canopies, including tropical and temperate broadleaf forests, leaves experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies than buffered lower-canopies, sometimes exceeding optima for photosynthesis ($T_{opt}$) and $T_{air}$, because of $g_s$-limitation and high solar radiation loads [@carterExperimentalWarmingTropical; @niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. 
-In contrast, in open forests with lower $LAI$, lower-canopy $T_{leaf}$ can equal or even exceed upper canopy $T_{leaf}$, due to greater light permeability, vertical air mixing, and still air in the lower canopy and heating from the ground [Figs. `r fig_NEON_vertical`h, `r SIfig_NEON_all`b,e, @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987;@rey-sanchez_spatial_2016]. 
-Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019]. 
+In contrast, in open forests with lower LAI, lower-canopy $T_{leaf}$ can equal or even exceed upper canopy $T_{leaf}$, due to greater light permeability, vertical air mixing, and still air in the lower canopy and heating from the ground [Figs. `r fig_NEON_vertical`h, `r SIfig_NEON_all`b,e, @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987;@rey-sanchez_spatial_2016]. 
+Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019; @johnstonWhatLiesVertical2020 (in review)]. 
 Greater $RH$ in inner canopy can also increase $T_{leaf}$ relatively more than upper canopy $T_{leaf}$ [@dietzVerticalPatternsDuration2007]. 
 
 It is noteworthy that $T_{leaf}$ often differs substantially from that of branches and stems; for instance, exposed tropical tree bark can be much warmer than leaves and flowers [@pauTropicalForestTemperature2018]. 
@@ -303,7 +303,7 @@ nocite: | @kafutiFoliarWoodTraits2020; @vanwittenbergheVariabilityStomatalConduc
 
 ### Stomatal conductance
 
-Maximum $g_s$ increases with light environment, and is thus higher in the sun exposed upper canopy than in subcanopy or understory leaves (Table 2). However, because of the high $VPD$ and irradiance experienced by sun leaves,  mid-day stomatal depression is prevalent in sun leaves but not in shade leaves.  $T_{leaf}$ of sun leaves thus further increases due to the lack of transpirational cooling [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. Higher maximum temperatures and $g_s$ influence leaf thermal sensitivity tolerance [@perezPhotosyntheticHeatTolerances2020], but exact mechanisms remain unclear. Additionally, $T_{opt}$ of $g_s$  did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019a], but sun leaves in the upper canopy show a stronger decrease in $gs$ to rising temperature than shade leaves in the lower canopy [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical]. 
+Maximum $g_s$ increases with light environment, and is thus higher in the sun exposed upper canopy than in subcanopy or understory leaves (Table 2). However, because of the high $VPD$ and irradiance experienced by sun leaves,  mid-day stomatal depression is more prevalent in sun leaves than shade leaves in closed forests.  $T_{leaf}$ of sun leaves thus further increases due to the lack of transpirational cooling [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. In more open forests, midday stomatal closure can occur in both upper canopy and lower canopy leaves, with stomata of lower canopy leaves remaining closed for a longer time duration than upper canopy, perhaps due to higher RH [@zweifelMiddayStomatalClosure2002]. Additionally, while $T_{opt}$ of $g_s$  did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019a], sun leaves in the upper canopy show a stronger decrease in $gs$ to rising temperature than shade leaves in the lower canopy [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical]. 
 
 ### Photosynthesis
 
@@ -314,9 +314,9 @@ Temperature can affect photosynthesis via direct and indirect pathways--directly
 [Baker 2008; @feeley_thermal_2020].  
 
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
-Based on consistent positive relationships between growth temperature and $T_{opt}$ across sites and seasons (e.g. Tan et al. 2017; @kumarathungeAcclimationAdaptationComponents2019a), one might expect sun leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5) in [Campbell and Norman 1998; *revisit this!*; @niinemetsShapeLeafPhotosynthetic1999; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the $T_{opt}$ for sun leaves tended to be moderately, but not significantly higher than that of shade leaves [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of the RuBP carboxylation  ($V_{max}$) and regeneration rates ($J_{max}$) didnot differ systematically between tropical sun and shade leaves [@hernandezSimilarTemperatureDependence2020], and along vertical gradients of tropical and temperate trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021;@mau_temperate_2018]. In contrast, tropical experimental warming observations show that $T_{opt}$, and $T_{opt}$ of $J_{max}$ decrease from understory to canopy [@carterExperimentalWarmingTropical 2021]. Further research is required to discern temperature sensitivity at a vertical gradient.
+Based on consistent positive relationships between growth temperature and $T_{opt}$ across sites and seasons (e.g. @tanOptimumAirTemperature2017; @kumarathungeAcclimationAdaptationComponents2019a), one might expect sun leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5) in [Campbell and Norman 1998; *revisit this!*; @niinemetsShapeLeafPhotosynthetic1999; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the $T_{opt}$ for sun leaves tended to be moderately, but not significantly higher than that of shade leaves [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of the RuBP carboxylation  ($V_{max}$) and regeneration rates ($J_{max}$) didnot differ systematically between tropical sun and shade leaves [@hernandezSimilarTemperatureDependence2020], and along vertical gradients of tropical and temperate trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021;@mau_temperate_2018]. In contrast, tropical experimental warming observations show that $T_{opt}$, and $T_{opt}$ of $J_{max}$ decrease from understory to canopy, potentially linked to greater $g_s$ thermal sensitivity of upper canopy sun leaves [@carterExperimentalWarmingTropical 2021]. Higher maximum temperatures, and $g_s$ influence leaf thermal sensitivity tolerance [@perezPhotosyntheticHeatTolerances2020], but exact mechanisms remain unclear.
 
-@hernandezSimilarTemperatureDependence2020 speculated that the lack of sun-shade differences in $T_{opt}$ may reflect acclimation to similar temperatures of peak photosynthesis. Sun leaves experience higher temperatures, but maximum temperatures are associated with conditions of mid-day stomatal depression, and acclimation to optimize photosynthesis at these temperatures would not be advantageous. Shade leaves that do not experience mid-day depression continue to fix carbon even when afternoon air temperatures peak [@millerOnlySunlitLeaves2021]. Evaluating this requires diurnal monitoring of net photosynthesis through the canopy.
+@hernandezSimilarTemperatureDependence2020 also speculated that the observed lack of sun-shade differences in $T_{opt}$ may reflect acclimation to similar temperatures of peak photosynthesis. Sun leaves experience higher temperatures, but maximum temperatures are associated with conditions of mid-day stomatal depression, and acclimation to optimize photosynthesis at these temperatures would not be advantageous. Shade leaves that do not experience mid-day depression continue to fix carbon even when afternoon air temperatures peak [@millerOnlySunlitLeaves2021]. Evaluating this requires diurnal monitoring of net photosynthesis through the canopy.
  
 **Leaf photosynthetic thermal tolerance (Tcrit/ T50)**
 
@@ -333,7 +333,7 @@ Leaf thermal tolerances are more closely adapted to microclimate than macroclima
 
 **Similar to photosynthesis, respiration tends to be higher in canopy sun-leaves [@chenLeafEconomicsSpectrum2020], but temperature sensitivity of respiration--$Q_{10}$--shows no definite trend along the vertical gradient [@bolstad_foliar_1999; Weerasinghe et al.2014].**
 
-Temperature sensitivity of respiration ($Q_{10}$) along a within canopy gradient remains uncertain where $Q_{10}$ can be constant within vertical profiles and in seedling sun vs. shade leaves [@weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007; @zaragoza-castellsClimatedependentVariationsLeaf2008; @xuSeasonalVariationTemperature2006], and greater in upper-canopy leaves [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996]. Additionally, lower canopy leaf respiration has also been reported to be more sensitive to changes in $T_{air}$ than upper canopy [@griffinCanopyPositionAffects2002]. Recent observations also suggest that tropical upper canopy leaves down-regulate $Q_{10}$ with rising temperature [@carterExperimentalWarmingTropical]; this may vary based on leaf age and leaf traits, as in evergreen species, $Q_{10}$ has shown to be greater in younger than older leaves [@zhouLeafageEffectsTemperature2015].  
+Temperature sensitivity of respiration ($Q_{10}$) along a within canopy gradient remains uncertain where $Q_{10}$ can be constant within vertical profiles and in seedling sun vs. shade leaves [@@carterExperimentalWarmingTropical; @weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007; @zaragoza-castellsClimatedependentVariationsLeaf2008; @xuSeasonalVariationTemperature2006], and greater in upper-canopy leaves [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996]. Additionally, lower canopy leaf respiration has also been reported to be more sensitive to changes in $T_{air}$ than upper canopy [@griffinCanopyPositionAffects2002]. Recent observations suggest that tropical understory leaves down-regulate $Q_{10}$ with rising temperature [@carterExperimentalWarmingTropical]; this may vary based on leaf age and leaf traits, as in evergreen species, $Q_{10}$ has shown to be greater in younger than older leaves [@zhouLeafageEffectsTemperature2015].  
 
 Further, we would expect $Q_{10}$ to also vary with soil moisture based on the evidence of canopy-position effect gradients in respiration rates for *Quercus rubra* being much greater in mesic than in xeric sites [@xuSeasonalVariationTemperature2006].
 
