small spelling edits

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -8846,6 +8846,26 @@
   number = {3}
 }
 
+@article{truebaThresholdsLeafDamage2019,
+  title = {Thresholds for Leaf Damage Due to Dehydration: Declines of Hydraulic Function, Stomatal Conductance and Cellular Integrity Precede Those for Photochemistry},
+  shorttitle = {Thresholds for Leaf Damage Due to Dehydration},
+  author = {Trueba, Santiago and Pan, Ruihua and Scoffoni, Christine and John, Grace P. and Davis, Stephen D. and Sack, Lawren},
+  date = {2019},
+  journaltitle = {New Phytologist},
+  volume = {223},
+  pages = {134--149},
+  issn = {1469-8137},
+  doi = {10.1111/nph.15779},
+  url = {https://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.15779},
+  urldate = {2021-07-21},
+  abstract = {Given increasing water deficits across numerous ecosystems world-wide, it is urgent to understand the sequence of failure of leaf function during dehydration. We assessed dehydration-induced losses of rehydration capacity and maximum quantum yield of the photosystem II (Fv/Fm) in the leaves of 10 diverse angiosperm species, and tested when these occurred relative to turgor loss, declines of stomatal conductance gs, and hydraulic conductance Kleaf, including xylem and outside xylem pathways for the same study plants. We resolved the sequences of relative water content and leaf water potential Ψleaf thresholds of functional impairment. On average, losses of leaf rehydration capacity occurred at dehydration beyond 50\% declines of gs, Kleaf and turgor loss point. Losses of Fv/Fm occurred after much stronger dehydration and were not recovered with leaf rehydration. Across species, tissue dehydration thresholds were intercorrelated, suggesting trait co-selection. Thresholds for each type of functional decline were much less variable across species in terms of relative water content than Ψleaf. The stomatal and leaf hydraulic systems show early functional declines before cell integrity is lost. Substantial damage to the photochemical apparatus occurs at extreme dehydration, after complete stomatal closure, and seems to be irreversible.},
+  annotation = {\_eprint: https://nph.onlinelibrary.wiley.com/doi/pdf/10.1111/nph.15779},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\KNREXVQZ\\Trueba et al. - 2019 - Thresholds for leaf damage due to dehydration dec.pdf;C\:\\Users\\Me\\Zotero\\storage\\2CV5AZ5F\\nph.html},
+  keywords = {drought stress,leaf hydraulics,photosynthesis,recovery,rehydration,stomatal conductance,turgor loss point,vulnerability},
+  langid = {english},
+  number = {1}
+}
+
 @article{turnbullRespirationCharacteristicsTemperate2005,
   title = {Respiration Characteristics in Temperate Rainforest Tree Species Differ along a Long-Term Soil-Development Chronosequence},
   author = {Turnbull, Matthew H. and Tissue, David T. and Griffin, Kevin L. and Richardson, Sarah J. and Peltzer, Duane A. and Whitehead, David},
